--- a/src/components/ticket-list/ticket-list.css
+++ b/src/components/ticket-list/ticket-list.css
@@ -82,11 +82,6 @@
   margin-right: 10px;
 }
 
-.ticket-item .ticket-description {
-  display: block;
-  margin-top: 10px;
-}
-
 .ticket-created {
   margin-right: 10px;
   margin-left: auto;
@@ -118,7 +113,8 @@
 /* Стили для элемента тикета */
 .ticket-item {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: space-between;
   margin-bottom: 10px;
   padding: 10px;
@@ -126,6 +122,23 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.ticket-item .main-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: -webkit-fill-available;
+}
+
+.ticket-item .extra-container {
+  width: -webkit-fill-available;
+}
+
+.ticket-item .ticket-description {
+  display: block;
+  margin-top: 10px;
+  margin-left: 34px;
 }
 
 /* Стили для чекбокса статуса */
